<resources>
    <string name="app_name">PADC-3-F-KHM-MM-News</string>
    <string name="action_settings">Settings</string>

    <string name="dummy_news_details">
        နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ် ဒေါ်အောင်ဆန်းစုကြည်နှင့် တရုတ်သမ္မတ ရှီကျင်ပင်း ဦးဆောင်သည့် ကိုယ်စားလှယ်အဖွဲ့ တွေ့ဆုံပြီး နှစ်နိုင်ငံ ထိပ်သီးဆွေးနွေးပွဲကျင်းပ နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ် ဒေါ်အောင်ဆန်းစုကြည်နှင့် တရုတ်သမ္မတ ရှီကျင်ပင်း ဦးဆောင်သည့် ကိုယ်စားလှယ်အဖွဲ့ တွေ့ဆုံခဲ့ပြီး နှစ်နိုင်ငံအကြား ထိပ်သီးဆွေးနွေးပွဲ ကျင်းပခဲ့ကြောင်း နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ်ရုံးက သတင်းထုတ်ပြန်သည်။

တရုတ်နိုင်ငံသို့ ရောက်ရှိနေသော နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ်နှင့်အဖွဲ့သည် ဒီဇင်ဘာ ၁ ရက် ဒေသစံတော်ချိန် မွန်းလွဲ ၃ နာရီ ၁၅ မိနစ်တွင် နှစ်နိုင်ငံ ထိပ်သီးအစည်းအဝေးပွဲသို့ တက်ရောက်ရန် ပြည်သူ့ခန်းမဆောင်သို့ ရောက်ရှိခဲ့ကြောင်း၊ နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ်နှင့် တရုတ်သမ္မတ ရှီကျင်ပင်းသည် ဒေသစံတော်ချိန် မွန်းလွဲ ၃ နာရီခွဲတွင် ပြည်သူ့ခန်းမဆောင် ပထမထပ်တွင်တွေ့ဆုံခဲ့ကြောင်း သိရသည်။


115
ရှေးဦးစွာ တရုတ်ပြည်သူ့သမ္မတနိုင်ငံသမ္မတ ရှီကျင်ပင်းက နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ် ဒေါ်အောင်ဆန်းစုကြည်အား ကြိုဆိုနှုတ်ဆက်ပြီး မှတ်တမ်းတင်ဓာတ်ပုံ ရိုက်ကူးခဲ့ကြောင်း သိရသည်။

        နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ် ဒေါ်အောင်ဆန်းစုကြည်နှင့် တရုတ်သမ္မတ ရှီကျင်ပင်း ဦးဆောင်သည့် ကိုယ်စားလှယ်အဖွဲ့ တွေ့ဆုံပြီး နှစ်နိုင်ငံ ထိပ်သီးဆွေးနွေးပွဲကျင်းပ နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ် ဒေါ်အောင်ဆန်းစုကြည်နှင့် တရုတ်သမ္မတ ရှီကျင်ပင်း ဦးဆောင်သည့် ကိုယ်စားလှယ်အဖွဲ့ တွေ့ဆုံခဲ့ပြီး နှစ်နိုင်ငံအကြား ထိပ်သီးဆွေးနွေးပွဲ ကျင်းပခဲ့ကြောင်း နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ်ရုံးက သတင်းထုတ်ပြန်သည်။

တရုတ်နိုင်ငံသို့ ရောက်ရှိနေသော နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ်နှင့်အဖွဲ့သည် ဒီဇင်ဘာ ၁ ရက် ဒေသစံတော်ချိန် မွန်းလွဲ ၃ နာရီ ၁၅ မိနစ်တွင် နှစ်နိုင်ငံ ထိပ်သီးအစည်းအဝေးပွဲသို့ တက်ရောက်ရန် ပြည်သူ့ခန်းမဆောင်သို့ ရောက်ရှိခဲ့ကြောင်း၊ နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ်နှင့် တရုတ်သမ္မတ ရှီကျင်ပင်းသည် ဒေသစံတော်ချိန် မွန်းလွဲ ၃ နာရီခွဲတွင် ပြည်သူ့ခန်းမဆောင် ပထမထပ်တွင်တွေ့ဆုံခဲ့ကြောင်း သိရသည်။


115
ရှေးဦးစွာ တရုတ်ပြည်သူ့သမ္မတနိုင်ငံသမ္မတ ရှီကျင်ပင်းက နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ် ဒေါ်အောင်ဆန်းစုကြည်အား ကြိုဆိုနှုတ်ဆက်ပြီး မှတ်တမ်းတင်ဓာတ်ပုံ ရိုက်ကူးခဲ့ကြောင်း သိရသည်။

        နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ် ဒေါ်အောင်ဆန်းစုကြည်နှင့် တရုတ်သမ္မတ ရှီကျင်ပင်း ဦးဆောင်သည့် ကိုယ်စားလှယ်အဖွဲ့ တွေ့ဆုံပြီး နှစ်နိုင်ငံ ထိပ်သီးဆွေးနွေးပွဲကျင်းပ နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ် ဒေါ်အောင်ဆန်းစုကြည်နှင့် တရုတ်သမ္မတ ရှီကျင်ပင်း ဦးဆောင်သည့် ကိုယ်စားလှယ်အဖွဲ့ တွေ့ဆုံခဲ့ပြီး နှစ်နိုင်ငံအကြား ထိပ်သီးဆွေးနွေးပွဲ ကျင်းပခဲ့ကြောင်း နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ်ရုံးက သတင်းထုတ်ပြန်သည်။

တရုတ်နိုင်ငံသို့ ရောက်ရှိနေသော နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ်နှင့်အဖွဲ့သည် ဒီဇင်ဘာ ၁ ရက် ဒေသစံတော်ချိန် မွန်းလွဲ ၃ နာရီ ၁၅ မိနစ်တွင် နှစ်နိုင်ငံ ထိပ်သီးအစည်းအဝေးပွဲသို့ တက်ရောက်ရန် ပြည်သူ့ခန်းမဆောင်သို့ ရောက်ရှိခဲ့ကြောင်း၊ နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ်နှင့် တရုတ်သမ္မတ ရှီကျင်ပင်းသည် ဒေသစံတော်ချိန် မွန်းလွဲ ၃ နာရီခွဲတွင် ပြည်သူ့ခန်းမဆောင် ပထမထပ်တွင်တွေ့ဆုံခဲ့ကြောင်း သိရသည်။


115
ရှေးဦးစွာ တရုတ်ပြည်သူ့သမ္မတနိုင်ငံသမ္မတ ရှီကျင်ပင်းက နိုင်ငံတော်၏ အတိုင်ပင်ခံပုဂ္ဂိုလ် ဒေါ်အောင်ဆန်းစုကြည်အား ကြိုဆိုနှုတ်ဆက်ပြီး မှတ်တမ်းတင်ဓာတ်ပုံ ရိုက်ကူးခဲ့ကြောင်း သိရသည်။
    </string>

    <string name="title_news_by_category"> News By Category </string>
    <string name="top_sport_news_title">Real Madrid do not want to play beautiful football like Barcelona - Xavi</string>
    <string name="content_news_1">Nottingham Forest hero Eric Lichaj finally got that dog.</string>
    <string name="content_news_2">Kane reveals sacrifices behind beating Messi, Ronaldo</string>
    <string name="content_news_3">Onefootball Podcast: Transfers! Transfers! (and some football stuff)</string>
    <string name="content_news_4">Hazzard Back but Arsenal too soon for Barkley</string>

    <string name="menu_item_all_news">All News</string>
    <string name="menu_item_news_by_category">News By Category</string>
</resources>
