<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_sport_news_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:elevation="4dp">
    <ScrollView
        android:id="@+id/sv_sport_news"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_top_news_logo"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/fire" />

            <TextView
                android:id="@+id/tv_top_sport_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/iv_top_news_logo"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/iv_top_news_logo"
                android:text="Top News"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_real_madrid_image"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_below="@+id/tv_top_sport_news"
                android:layout_marginTop="26dp"
                android:scaleType="centerCrop"
                android:src="@drawable/roanldo" />

            <TextView
                android:id="@+id/tv_top_sprot_news_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_real_madrid_image"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="14dp"
                android:text="@string/top_sport_news_title"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/iv_one_football_logo"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignLeft="@id/tv_top_sprot_news_title"
                android:layout_below="@id/tv_top_sprot_news_title"
                android:layout_marginTop="24dp"
                android:src="@drawable/onefootball_logo" />

            <TextView
                android:id="@+id/tv_one_football"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/iv_one_football_logo"
                android:layout_below="@id/tv_top_sprot_news_title"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/iv_one_football_logo"
                android:text="Onefootball"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

            <View
                android:id="@+id/v_separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_one_football"
                android:background="@color/secondary_text"
                android:layout_marginTop="14dp"/>

            <ImageView
                android:id="@+id/iv_content_news_1"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:src="@drawable/norttingham"
                android:layout_below="@id/v_separator"
                android:scaleType="centerCrop"
                android:layout_alignLeft="@id/iv_one_football_logo"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tv_content_news_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_news_1"
                android:textSize="16sp"
                android:layout_below="@id/v_separator"
                android:layout_toRightOf="@id/iv_content_news_1"
                android:layout_alignTop="@id/iv_content_news_1"
                android:layout_marginLeft="8dp"
                android:textColor="@color/primary_text" />

            <ImageView
                android:id="@+id/iv_one_football_logo_1"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignLeft="@id/tv_content_news_1"
                android:layout_below="@id/tv_content_news_1"
                android:layout_marginTop="24dp"
                android:src="@drawable/onefootball_logo" />

            <TextView
                android:id="@+id/tv_one_football_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/iv_one_football_logo_1"
                android:layout_below="@id/tv_content_news_1"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/iv_one_football_logo_1"
                android:text="Onefootball"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

            <View
                android:id="@+id/v_separator_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_one_football_1"
                android:background="@color/secondary_text"
                android:layout_marginTop="8dp"/>

            <ImageView
                android:id="@+id/iv_content_news_2"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:src="@drawable/harry_kane"
                android:layout_below="@id/v_separator_1"
                android:scaleType="centerCrop"
                android:layout_alignLeft="@id/iv_one_football_logo"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tv_content_news_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_news_2"
                android:textSize="16sp"
                android:layout_below="@id/v_separator_1"
                android:layout_toRightOf="@id/iv_content_news_2"
                android:layout_alignTop="@id/iv_content_news_2"
                android:layout_marginLeft="8dp"
                android:textColor="@color/primary_text" />

            <ImageView
                android:id="@+id/iv_one_football_logo_2"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignLeft="@id/tv_content_news_2"
                android:layout_below="@id/tv_content_news_2"
                android:layout_marginTop="24dp"
                android:src="@drawable/onefootball_logo" />

            <TextView
                android:id="@+id/tv_one_football_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/iv_one_football_logo_2"
                android:layout_below="@id/tv_content_news_2"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/iv_one_football_logo_2"
                android:text="Onefootball"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

            <View
                android:id="@+id/v_separator_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_one_football_2"
                android:background="@color/secondary_text"
                android:layout_marginTop="8dp"/>

            <ImageView
                android:id="@+id/iv_content_news_3"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:src="@drawable/coutinho"
                android:layout_below="@id/v_separator_2"
                android:scaleType="centerCrop"
                android:layout_alignLeft="@id/iv_one_football_logo"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tv_content_news_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_news_3"
                android:textSize="16sp"
                android:layout_below="@id/v_separator_2"
                android:layout_toRightOf="@id/iv_content_news_3"
                android:layout_alignTop="@id/iv_content_news_3"
                android:layout_marginLeft="8dp"
                android:textColor="@color/primary_text" />

            <ImageView
                android:id="@+id/iv_one_football_logo_3"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignLeft="@id/tv_content_news_3"
                android:layout_below="@id/tv_content_news_3"
                android:layout_marginTop="24dp"
                android:src="@drawable/onefootball_logo" />

            <TextView
                android:id="@+id/tv_one_football_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/iv_one_football_logo_3"
                android:layout_below="@id/tv_content_news_3"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/iv_one_football_logo_3"
                android:text="Onefootball"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

            <View
                android:id="@+id/v_separator_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_one_football_3"
                android:background="@color/secondary_text"
                android:layout_marginTop="8dp"/>

            <ImageView
                android:id="@+id/iv_content_news_4"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:src="@drawable/hazzard"
                android:layout_below="@id/v_separator_3"
                android:scaleType="centerCrop"
                android:layout_alignLeft="@id/iv_one_football_logo"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tv_content_news_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_news_4"
                android:textSize="16sp"
                android:layout_below="@id/v_separator_3"
                android:layout_toRightOf="@id/iv_content_news_4"
                android:layout_alignTop="@id/iv_content_news_4"
                android:layout_marginLeft="8dp"
                android:textColor="@color/primary_text" />

            <ImageView
                android:id="@+id/iv_one_football_logo_4"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignLeft="@id/tv_content_news_4"
                android:layout_below="@id/tv_content_news_4"
                android:layout_marginTop="24dp"
                android:src="@drawable/onefootball_logo" />

            <TextView
                android:id="@+id/tv_one_football_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/iv_one_football_logo_4"
                android:layout_below="@id/tv_content_news_4"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/iv_one_football_logo_4"
                android:text="Onefootball"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

        </RelativeLayout>

    </ScrollView>


</android.support.v7.widget.CardView>